Add waitlist model

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                     <i class="fas fa-rocket"></i>
                     Get Started
                 </a>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfy-6h9HJ1oor8KxNJIz9VVhLIzLWFu8WDkrtJiYSFD1-w5rg/viewform?usp=dialog" class="cta secondary-cta">
+                <a href="#waitlist" class="cta secondary-cta">
                     <i class="fas fa-user-plus"></i>
                     Join Waiting List
                 </a>
@@ -443,7 +443,7 @@
     </section> -->
 
     <!-- Add this HTML at the bottom of your body tag -->
-    <!-- <div id="waitlistModal" class="modal">
+    <div id="waitlistModal" class="modal">
         <div class="modal-content">
             <span class="close-btn">&times;</span>
             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfy-6h9HJ1oor8KxNJIz9VVhLIzLWFu8WDkrtJiYSFD1-w5rg/viewform?usp=dialog"
@@ -455,7 +455,7 @@
                 Loading...
             </iframe>
         </div>
-    </div> -->
+    </div>
 
     <script>
         const modal = document.getElementById("waitlistModal");
