--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
         }
 
         let typed = new Typed('#event-type', {
-            strings: ['wedding', 'travel', 'celebration', 'conference', 'party'],
+            strings: ['wedding', 'trip', 'celebration', 'conference', 'party'],
             typeSpeed: 50,
             backSpeed: 30,
             backDelay: 2000,
